--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi (>=0.116.0,<0.117.0)",
+    "pydantic (>=2.11.7,<3.0.0)"
 ]
 
 
